syntax = "proto3";

package rpcx;

message EInfo {
  int64 status = 1;
  string requestID = 2;
  string code = 3;
  string message = 4;
  string refer = 5;
}